// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/channel_filter should match snapshot 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <button
      aria-label="unreads filter"
      aria-pressed="false"
      class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarFilters_filterButton"
      data-testid="sidebar-unread-filter-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="_icon-button__icon-slot_g2m23_33"
      >
        <div
          aria-hidden="true"
          class="_icon_1i355_2 _icon--size-16_1i355_38"
        >
          <div
            class="_icon__glyph-area_1i355_9"
          >
            <svg
              fill="currentColor"
              height="18"
              version="1.1"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6,13H18V11H6M3,6V8H21V6M10,18H14V16H10V18Z"
              />
            </svg>
          </div>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`components/sidebar/channel_filter should match snapshot if the unread filter is enabled 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <button
      aria-label="unreads filter"
      aria-pressed="true"
      class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 _icon-button--toggled_g2m23_25 SidebarFilters_filterButton active"
      data-testid="sidebar-unread-filter-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="_icon-button__icon-slot_g2m23_33"
      >
        <div
          aria-hidden="true"
          class="_icon_1i355_2 _icon--size-16_1i355_38"
        >
          <div
            class="_icon__glyph-area_1i355_9"
          >
            <svg
              fill="currentColor"
              height="18"
              version="1.1"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6,13H18V11H6M3,6V8H21V6M10,18H14V16H10V18Z"
              />
            </svg>
          </div>
        </div>
      </span>
    </button>
  </div>
</div>
`;
